Inserindo contador e tabela no HTML, começando a trabalhar as funções do JavaScript

--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
 <html>
+
+<p id="counter"></p>
+
+<table>
+    <tr>
+        <th>Name</th>
+    </tr>
+    <tbody id="countries">
+    </tbody>
+</table>
+
 <head>
 <meta charset="utf-8">
-    <title>Países e Cidades</title>
+    <title>Países</title>
 </head>
 <body>
+
+<script>
+
+//declarando função global
+var app = new function() {
+
+    //code
+}
+
+</script>
 
 </body>
 </html>
