--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 
+<form action="javascript:void(0);" method="POST" onsubmit="app.Add()">
+    <input type="text" id="add-name" placeholder="New country">
+    <input type="submit" value="Add">
+</form>
+
+
+
 <p id="counter"></p>
 
 <table>
@@ -22,8 +29,11 @@
 //declarando função global
 var app = new function() {
 
-    //code
+    this.Add = function () {
+        alert('add something');
+    }
 }
+
 //selecionando elementos onde queremos exibir dados
 this.el = document.getElementById('countries');
 
@@ -63,6 +73,21 @@ this.FetchALL = function() {
 
 app.FetchALL();
 
+this.Add = function() {
+    el = document.getElementById('add-name');
+    //pega o valor
+    var country = el.value;
+
+    if (country) {
+        //add um novo valor
+        this.countries.push(country.trim());
+        //reseta o input valor
+        el.value = ' ';
+        //Dislay uma nova lista
+        this.FetchALL();
+    }
+
+}
 
 </script>
 
