Iniciando Função Editar linhas e começar a fazer a Função Deletar

--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
     <input type="submit" value="Add">
 </form>
 
+<div id="spoiler" role="aria-hidden">
+    <form action="javascript:void(0);" method="POST" id="saveEdit">
+    <input type="text" id="edit-name">
+    <input type="submit" value="Edit" /> <a onclick="CloseInput()" aria-label="Close">&#10006;</a>
+    </form>
+</div>
 
+<style>
+
+    #spoiler {
+        display: none;
+    }
+
+</style>
 
 <p id="counter"></p>
 
@@ -86,8 +99,17 @@ this.Add = function() {
         //Dislay uma nova lista
         this.FetchALL();
     }
-
+    data += '<td><button onclick="app.Edit (' + i + ')">Edit</button></td>';
 }
+
+function CloseInput() {
+    document.getElementById('spoiler').style.display = 'none';
+}
+
+This.Edit = function (item) {
+    alerta (item);
+}
+
 
 </script>
 
