--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <meta charset="utf-8">
 
 <form action="javascript:void(0);" method="POST" onsubmit="app.Add()">
@@ -143,3 +145,5 @@ this.Delete = function (item) {
 </script>
 
 </body>
+
+</html>
