Correção de bugs, refatoração de algumas funções e finalização do projeto

--- a/index.html
+++ b/index.html
@@ -1,149 +1,122 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-<meta charset="utf-8">
-
-<form action="javascript:void(0);" method="POST" onsubmit="app.Add()">
-    <input type="text" id="add-name" placeholder="New country">
-    <input type="submit" value="Add">
-</form>
-
-<div id="spoiler" role="aria-hidden">
-    <form action="javascript:void(0);" method="POST" id="saveEdit">
-    <input type="text" id="edit-name">
-    <input type="submit" value="Edit" /> <a onclick="CloseInput()" aria-label="Close">&#10006;</a>
-    </form>
-</div>
-
-<style>
-
-    #spoiler {
-        display: none;
-    }
-
-</style>
-
-<p id="counter"></p>
-
-<table>
-    <tr>
-        <th>Name</th>
-    </tr>
-    <tbody id="countries">
-    </tbody>
-</table>
-
 <head>
 <meta charset="utf-8">
-    <title>Países</title>
+    <title>CRUD de Países</title>
+    <style>
+        input[type='submit'], button, [aria-label]  {
+            cursor: pointer;
+        }
+        #spoiler    {
+            display: none;
+        }
+    </style>
 </head>
 <body>
 
+<form action="javascript:void(0);" method="POST" onsubmit="app.Add()">
+    <input type="text" id="add-nome" placeholder="Novo País">
+    <input type="submit" value="Add">
+</form>
+
+<div>
+    <form action="javascript:void(0);" method="POST" id="saveEdit">
+        <input type="text" id="edit-nome">
+        <input type="submit" value="Edit"/> <a onclick="CloseInput()" aria-label="Close">&#10006;</a>
+    </form>
+</div>
+
+<p id="contador"></p>
+
+<table>
+    <tr>
+        <th>nome</th>
+    </tr>
+        <tbody id="paises">
+        </tbody>
+</table>
+
 <script>
-
-//declarando função global
-var app = new function() {
-
-    this.Add = function () {
-        alert('add something');
-    }
-}
-
-//selecionando elementos onde queremos exibir dados
-this.el = document.getElementById('countries');
-
-//dados em uma matriz simples
-this.countries = ['France', 'Germany', 'England', 'Spain', 'Belgium', 'Italy', 'Portugal', 'Irland', 'Luxemburg'];
-
-//inserindo cotador em uma função
-this.Count = function(data) {
-    var el = document.getElementById('counter');
-    var name = 'country';
-
-    if (data) {
-        if (data > 1) {
-            name = 'countries';
+// Função Global
+var app = new function()    {
+    this.el = document.getElementById('paises');
+    this.paises = ['França', 'Alemanha', 'Inglaterra', 'Espanha', 'Belgica', 'Itália', 'Portugual', 'Irlanda', 'Luxemburgo'];
+    this.Contador = function(data)  {
+        var el = document.getElementById('contador');
+        var nome = 'pais';
+        if (data) {
+            if (data > 1) {
+                nome = 'paises';
+            }
+            innerHTML = data + ' ' + nome;
+        }   else    {
+            el.innerHTML = 'No' + nome;
         }
-        el.innerHTML = data + ' ' + name;
-    }   else {
-        el.innerHTML = 'No ' + name;
-    }
-};
-
-//inciando CRUD
-this.FetchALL = function() {
-    var data = ' ';
-
-    if (this.countries.length > 0) {
-        for(i = 0; i < this.countries.length; i++) {
-            data += '<tr>';
-            data += '<tr>' + this.countries[i] + '</td>';
-            data += '</tr>';
+    };
+    //Iniciando o CRUD
+    this.FetchAll = function()  {
+        var data = '';
+        if (this.paises.length > 0) {
+            for(i = 0; i < this.paises.length; i++) {
+                data += '<tr>';
+                data += '<td>' + this.paises[i] + '</td>';
+                data += '<td><button onclick="app.Edit(' + i + ')">Edit</button></td>';
+                data += '<td><button onclick="app.Delete(' + i + ')">Delete</button></td>';
+                data += '</tr>';
+            }
         }
-    }
-
-    this.Count(this.countries.length);
-    return this.el.innerHTML = data;
-};
-
-app.FetchALL();
-
-this.Add = function() {
-    el = document.getElementById('add-name');
-    //pega o valor
-    var country = el.value;
-
-    if (country) {
-        //add um novo valor
-        this.countries.push(country.trim());
-        //reseta o input valor
-        el.value = ' ';
-        //Dislay uma nova lista
-        this.FetchALL();
-    }
-    data += '<td><button onclick="app.Edit (' + i + ')">Edit</button></td>';
-    data += '<td><button onclick="app.Delete(' + i + ')">Delete</button></td>';
-}
-
-function CloseInput() {
-    document.getElementById('spoiler').style.display = 'none';
-}
-
-this.Edit = function (item) {
-    alert (item);
-}
-
-this.Edit = function(item) {
-    var el = document.getElementById('Edit-name');
-    //Display value in the field
-    el.value = this.countries[item];
-    //Display fields
-    document.getElementById('spoiler').style.display = 'block';
-    self = this;
-
-    document.getElementById('saveEdit').onsubmit = function() {
-        //pegar o valor
-        var country = el.value;
-
-        if (country) {
-            //edita valor
-            self.countries.splice(item, 1, country.trim());
-            //Display a nova lista
-            self.FetchALL();
-            //Hide fields
-            CloseInput();
+        this.Contador(this.paises.length);
+        return this.el.innerHTML = data;
+    };
+    //Função que Adiciona
+    this.Add = function()   {
+        el.document.getElementById('add-nome');
+        //Obtem o valor
+        var pais = el.value;
+        if (pais) {
+            //Adiciona o novo valor
+            this.paises.push(pais.trim());
+            //Redefine o valor de entrada
+            el.value = '';
+            //Desloca a nova lista
+            this.FetchAll();
         }
-    }
-};
-
-this.Delete = function (item) {
-    //Delete the current row
-    this.countries.splice(item, 1);
-    //Display nova lista
-    this.FetchALL();
-};
-
+    };
+    //Função que Edita
+    this.Edit = function(item)  {
+        var el = document.getElementById('edit-nome');
+        //Exibir valor no campo
+        el. value = this.paises[item];
+        //Exibir campos
+        document.getElementById('spoiler').style.display = 'block';
+        self = this;
+        document.getElementById('saveEdit').onsubmit = function()   {
+            //Obter o valor
+            var pais = el.value;
+            if (pais) {
+                //Editar valor
+                self.paises.splice(item, 1, pais.trim());
+                //Mostrar a nova lista
+                self.FetchAll();
+                //Ocultar campos
+                CloseInput();
+            }
+        }
+    };
+    //Função que Deleta
+    this.Delete = function(item)    {
+        //Deletar a linha atual
+        this.paises.splice(item, 1);
+        //Mostrar a nova lista
+        this.FetchAll();
+    };
+}
+//Função que testa
+app.FetchAll();
+function CloseInput()   {
+    document.getElementById('spoiler').style = 'none';
+}
 </script>
-
 </body>
-
 </html>
